--- a/cafe-florette/find-us.html
+++ b/cafe-florette/find-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Café Florette | Acceuil</title>
+    <title>Café Florette | Nous trouver</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
@@ -15,8 +15,8 @@
       <nav>
         <h1><a href="./index.html">CAFE FLORETTE</a></h1>
         <ul>
-          <li><a class="active" href="./index.html">Accueil</a></li>
-          <li><a href="./find-us.html">Nous trouver</a></li>
+          <li><a href="./index.html">Accueil</a></li>
+          <li><a class="active" href="./find-us.html">Nous trouver</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
