--- a/cafe-florette/index.html
+++ b/cafe-florette/index.html
@@ -21,5 +21,18 @@
         </ul>
       </nav>
     </header>
+    <section class="vp">
+      <div class="vp-content">
+        <h1>Toute l'expertise française dans un café</h1>
+        <div class="separator"></div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+          quae, sed delectus sint ut cumque? A qui debitis nemo. Perferendis
+          sequi tempora exercitationem recusandae cupiditate doloremque
+          molestias id distinctio mollitia?
+        </p>
+        <a href="./find-us.html" class="btn btn-primary m-10">DECOUVRIR</a>
+      </div>
+    </section>
   </body>
 </html>
