Add FontAwesome icons and new features under vp section

--- a/cafe-florette/index.html
+++ b/cafe-florette/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300,400,700&display=swap"
     />
+    <script
+      src="https://kit.fontawesome.com/79099de5f8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -32,6 +36,30 @@
           molestias id distinctio mollitia?
         </p>
         <a href="./find-us.html" class="btn btn-primary m-10">DECOUVRIR</a>
+      </div>
+    </section>
+    <section class="features">
+      <div class="container">
+        <div class="feature">
+          <i class="fa-solid fa-mug-saucer fa-3x my-10"></i>
+          <h2>Un nouveau café par jour</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Voluptatibus quod, dolorem totam culpa ipsa maiores omnis dolore
+            sapiente doloribus quas porro, id eos voluptatum ducimus obcaecati
+            corporis, odio aliquam facere.
+          </p>
+        </div>
+        <div class="feature">
+          <i class="fa-solid fa-clock fa-3x my-10"></i>
+          <h2>Ouvert 24h/24 7j/7</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi qui
+            praesentium officiis sit eos eius reiciendis expedita, aspernatur
+            veritatis rem odio ex soluta, quam eveniet harum repellat non et
+            doloremque.
+          </p>
+        </div>
       </div>
     </section>
   </body>
