Add footer and reservation functionality to the index page.

--- a/cafe-florette/index.html
+++ b/cafe-florette/index.html
@@ -62,5 +62,21 @@
         </div>
       </div>
     </section>
+    <div class="person"></div>
+    <section class="reservation">
+      <div class="container">
+        <h2>Reservez dès maintenant</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis id quo
+          ut dolor vel deleniti, dicta labore quod facilis veniam aliquam a
+          perspiciatis iste, architecto optio esse accusamus voluptatibus
+          suscipit?
+        </p>
+        <a href="./contact.html" class="btn btn-dark my-20">RESERVEZ</a>
+      </div>
+    </section>
+    <footer>
+      <p>Copyrigth &#9400; - Café Florette - 2024</p>
+    </footer>
   </body>
 </html>
